# Entity-SEO

./: CLAUDE.md  CODEX.md  README.md  SKILL.md  pyproject.toml
docs/: qa-checklist.md
examples/: project.example.yaml
prompts/: entity-extraction.md  page-decision.md
schemas/: project-input.schema.json
src/entity_seo_skill/: cli.py  models.py  normalization.py  scoring.py  validator.py
templates/: content-brief.md
tests/: test_normalization.py  test_scoring.py
