[project]
name = "entity-seo-skill"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = ["pydantic>=2.7", "PyYAML>=6", "jsonschema>=4.22", "typer>=0.12"]

[project.scripts]
entity-seo = "entity_seo_skill.cli:app"

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
